[KNOWAGE-4110] Removed uppercase and moved to two lines in order to avoid overlapping

--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_misc.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_misc.scss
@@ -378,6 +378,12 @@ md-datepicker.kn-custom-datepicker {
     position: relative;
     text-transform: uppercase;
     font-size: $smallFontSize;
+	p {
+      margin: 0;
+    }
+    &.no-uppercase {
+      text-transform: none;
+    }
 }
 
 .kn-close-Info {
